fix: adjust line-height for main heading in header component for better readability

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -112,10 +112,9 @@
 #main-heading {
   @media screen and (max-width: 768px) {
     line-height: 4.5rem;
-    word-spacing: -0.1em;
   }
 
   @media screen and (min-width: 769px) {
-    line-height: 1.1;
+    line-height: 1;
   }
 }
